--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://rest-science.com/"
+baseURL = 'https://lovely-sable-11cf24.netlify.app/'
 title   = "Rest Science"
 languageCode = "en-us"
 enableRobotsTXT = true
