New automated content

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://lovely-sable-11cf24.netlify.app/'
+baseURL = 'https://www.rest-science.com/'
 title   = "Rest Science"
 languageCode = "en-us"
 enableRobotsTXT = true
